# ETL

./: .gitignore
Deploy/: docker-compose.yml
Deploy/admin/: Dockerfile
Deploy/nginx/: nginx.conf
Deploy/nginx/nginx_site_conf/: site.conf
Deploy/postgres_to_es/: Dockerfile  entrypoint.sh
movies_admin/: entrypoint.sh
movies_admin/cinema/: requirements.txt
movies_admin/cinema/cinema/: settings.py  urls.py
movies_admin/cinema/movies/: admin.py  models.py
movies_admin/cinema/movies/api/v1/: views.py
movies_admin/cinema/movies/migrations/: 0001_initial.py  0002_validators_constraints.py  0003_filmwork_persons.py
postgres_to_es/: consumer.py  decorator.py  elastic.py  etl_redis.py  index.py  models.py  postgres.py  producer.py  pyproject.toml  requirements.txt  settings.py  stop.py
