[tool.poetry]
name = "etl"
version = "0.1.0"
description = ""
authors = ["iKhabibullin <mailofilyas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2 = "^2.9.2"
python-dotenv = "^0.19.2"
elasticsearch = "^7.16.0"
loguru = "^0.5.3"
redis = "^4.0.2"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
